# neural-edo-bayes

./: License.md  README.md  pyproject.toml
markdown/: presentation_ptbr.md
references/: .bib
src/: main.py
src/data_preproc/: __init__.py  clean_down_data.py  collators.py  config.py  dataset.py  download_db.py  prepare_training_data.py  process_down_data.py
src/model/: __init__.py  aux_func.py  cells.py  ode_model_corpus.py
src/train_val/: train_model.py
tex/Template/: Bridging Theory and Practice.tex
tex/Template/appendix/: a.tex  b.tex  c.tex
tex/Template/appendix/markdown/: appendix_a.md  appendix_b.md  appendix_c.md
tex/Template/bib/: references.bib
tex/Template/sections/: conclusion.tex  discussion.tex  implem_optimi.tex  introduction.tex  results_annalysis.tex  theorical_background.tex
